--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="text"></div>
+    <script src="./script.js"></script>
 </body>
 </html>
